--- a/NotABookstore/package.json
+++ b/NotABookstore/package.json
@@ -18,6 +18,7 @@
     "@vitejs/plugin-vue": "^5.0.4",
     "eslint": "^8.57.0",
     "eslint-plugin-vue": "^9.23.0",
+    "sass": "^1.77.1",
     "vite": "^5.2.8"
   }
 }
