--- a/NotABookstore/package.json
+++ b/NotABookstore/package.json
@@ -13,7 +13,8 @@
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
     "vue": "^3.4.21",
-    "vue-router": "^4.3.0"
+    "vue-router": "^4.3.0",
+    "vuejs-paginate-next": "^1.0.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.4",
