--- a/NotABookstore/package.json
+++ b/NotABookstore/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
+    "firebase": "^10.12.0",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0",
     "vuejs-paginate-next": "^1.0.2"
